Fix layout break of cover photo in mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -4,8 +4,8 @@
 // Customized by YassLab
 
 .full-width{
-    margin-left:  -2%;
-    margin-right: -1.9%;
+  //margin-left:  -2%;
+  //margin-right: -1.9%;
 }
   
 .headline{
@@ -302,8 +302,8 @@ a {
 
 .cover {
     overflow: hidden;
-    min-height: 150px;
-    background: #999
+    min-height: 125px;
+    background: #999;
 }
 
 .cover > img {
